[package]
name = "asset-hub-polkadot-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ziggy = { version = "1.3.2", default-features = false }

asset-hub-polkadot-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.0", default-features = false }
staging-xcm = { default-features = false , version = "18.0.0" }

parachains-common = { default-features = false , version = "24.0.0" }

codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive", "max-encoded-len"] }

frame-support = { default-features = false, version = "42.0.0" }
frame-system = { default-features = false, version = "42.0.0" }

sp-runtime = { default-features = false, version = "43.0.0" }
sp-state-machine = { default-features = false, version = "0.47.0" }
sp-consensus-aura = { default-features = false, version = "0.44.0" }
sp-trie = { default-features = false, version = "41.0.0" }
sp-core = { default-features = false, version = "38.0.0" }

pallet-timestamp = { default-features = false, version = "41.0.0" }
pallet-balances = { default-features = false, version = "43.0.1" }
pallet-xcm = { default-features = false, version = "22.0.1" }
pallet-utility = { default-features = false, version = "42.0.0" }
pallet-proxy = { default-features = false, version = "42.0.0" }
pallet-multisig = { default-features = false, version = "42.0.0" }
pallet-vesting = { default-features = false, version = "42.0.0" }
pallet-whitelist = { default-features = false, version = "41.0.0" }

cumulus-primitives-core = { default-features = false , version = "0.20.0" }
cumulus-primitives-parachain-inherent = { default-features = false , version = "0.20.0" }
cumulus-pallet-parachain-system = { default-features = false, version = "0.22.1" }
cumulus-test-relay-sproof-builder = { default-features = false , version = "0.21.0" }

polkadot-parachain-primitives = { default-features = false, version = "18.0.0" }
polkadot-primitives = { default-features = false, version = "20.0.0" }

[features]
default = ["std", "try-runtime"]
fuzzing = []
std = [
    "asset-hub-polkadot-runtime/std",
	"parachains-common/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-state-machine/std",
	"sp-consensus-aura/std",
	"pallet-timestamp/std",
	"pallet-balances/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-parachain-inherent/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-test-relay-sproof-builder/std",
	"polkadot-parachain-primitives/std", 
	"sp-trie/std",
]
try-runtime = [
    "asset-hub-polkadot-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-timestamp/try-runtime",
]