[package]
name = "coretime-kusama-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ziggy = { version = "1.3.2", default-features = false }

coretime-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v1.6.1", default-features = false }
system-parachains-constants = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v1.6.1", default-features = false }

parachains-common = { default-features = false , version = "21.0.0" }

codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive", "max-encoded-len"] }

frame-support = { default-features = false, version = "40.1.0" }
frame-system = { default-features = false, version = "40.1.0" }

sp-runtime = { default-features = false, version = "41.1.0" }
sp-state-machine = { default-features = false, version = "0.45.0" }
sp-consensus-aura = { default-features = false, version = "0.42.0" }
sp-application-crypto = { default-features = false , version = "40.1.0" }

pallet-timestamp = { default-features = false, version = "39.0.0" }
pallet-balances = { default-features = false, version = "41.1.0" }
pallet-utility = { default-features = false, version = "40.0.0" }
pallet-multisig = { default-features = false, version = "40.1.0" }
pallet-proxy = { default-features = false, version = "40.1.0" }
pallet-broker = { default-features = false, version = "0.19.2" }
pallet-xcm = { default-features = false , version = "19.1.2" }

cumulus-primitives-core = { default-features = false , version = "0.18.1" }
cumulus-primitives-parachain-inherent = { default-features = false , version = "0.18.1" }
cumulus-pallet-parachain-system = { default-features = false, version = "0.20.0" }
cumulus-test-relay-sproof-builder = { default-features = false , version = "0.19.0" }

[features]
default = ["std", "try-runtime"]
fuzzing = []
std = [
    "coretime-kusama-runtime/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-xcm/std",
	"sp-consensus-aura/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-parachain-inherent/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-test-relay-sproof-builder/std",
]
try-runtime = [
    "coretime-kusama-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-timestamp/try-runtime",
]