[package]
name = "coretime-kusama-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ziggy = { workspace = true }

coretime-kusama-runtime = { workspace = true }
system-parachains-constants = { workspace = true }

parachains-common = { workspace = true }

codec = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }

sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-application-crypto = { workspace = true }

pallet-timestamp = { workspace = true }
pallet-balances = { workspace = true }
pallet-utility = { workspace = true }
pallet-multisig = { workspace = true }
pallet-proxy = { workspace = true }
pallet-broker = { workspace = true }
pallet-xcm = { workspace = true }

cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-test-relay-sproof-builder = { workspace = true }

[features]
default = ["std", "try-runtime"]
fuzzing = []
std = [
    "coretime-kusama-runtime/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-xcm/std",
	"sp-consensus-aura/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-parachain-inherent/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-test-relay-sproof-builder/std",
]
try-runtime = [
    "coretime-kusama-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-timestamp/try-runtime",
]