[package]
name = "kusama-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ziggy = { version = "1.2.1", default-features = false }

staging-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v1.3.3", default-features = false }
staging-xcm = { default-features = false , version = "14.1.0" }

#kusama-runtime-constants = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v1.3.3", default-features = false }

polkadot-primitives = { version = "14.0.0", default-features = false }
polkadot-runtime-parachains = { version = "15.0.2", default-features = false }

codec = { version = "3.6.12", features = ["derive", "max-encoded-len"], default-features = false, package = "parity-scale-codec" }

frame-support = { default-features = false , version = "36.0.0" }
frame-system = { default-features = false , version = "36.0.1" }

sp-application-crypto = { default-features = false , version = "37.0.0" }
sp-runtime = { default-features = false , version = "38.0.0" }
sp-state-machine = { default-features = false , version = "0.42.0" }
sp-consensus-babe = { default-features = false , version = "0.39.0" }
sp-consensus-beefy = { default-features = false , version = "20.0.0" }
sp-authority-discovery = { default-features = false , version = "33.0.0" }

pallet-balances = { default-features = false , version = "37.0.0" }
pallet-grandpa = { default-features = false , version = "36.0.0" }
pallet-society = { default-features = false, version = "36.0.0" }
pallet-utility = { default-features = false , version = "36.0.0" }
pallet-multisig = { default-features = false , version = "36.0.0" }
pallet-proxy = { default-features = false , version = "36.0.0" }
pallet-identity = { default-features = false , version = "36.0.0" }
pallet-bounties = { default-features = false , version = "35.0.0" }
pallet-staking = { default-features = false , version = "36.0.0" }
pallet-timestamp = { default-features = false , version = "35.0.0" }
pallet-xcm = { default-features = false , version = "15.0.0" }

[features]
default = ["std", "try-runtime"]
fuzzing = []
std = [
    "staging-kusama-runtime/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-grandpa/std",
	"pallet-balances/std",
	"pallet-staking/std",
	"sp-consensus-babe/std",
]
try-runtime = [
    "staging-kusama-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-timestamp/try-runtime",
]
