[package]
name = "kusama-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ziggy = { version = "1.3.2", default-features = false }

staging-kusama-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v1.6.1", default-features = false }
staging-xcm = { default-features = false , version = "16.2.0" }

kusama-runtime-constants = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v1.6.1", default-features = false }

polkadot-primitives = { version = "18.2.0", default-features = false }
polkadot-runtime-parachains = { version = "19.2.0", default-features = false }

codec = { version = "3.7.5", features = ["derive", "max-encoded-len"], default-features = false, package = "parity-scale-codec" }

frame-support = { default-features = false , version = "40.1.0" }
frame-system = { default-features = false , version = "40.1.0" }

sp-application-crypto = { default-features = false , version = "40.1.0" }
sp-runtime = { default-features = false , version = "41.1.0" }
sp-state-machine = { default-features = false , version = "0.45.0" }
sp-consensus-babe = { default-features = false , version = "0.42.1" }
sp-consensus-beefy = { default-features = false , version = "24.1.0" }
sp-authority-discovery = { default-features = false , version = "36.0.0" }
sp-core = { default-features = false, version = "35.0.0" }

pallet-balances = { default-features = false , version = "41.1.0" }
pallet-grandpa = { default-features = false , version = "40.0.0" }
pallet-society = { default-features = false, version = "40.1.0" }
pallet-utility = { default-features = false , version = "40.0.0" }
pallet-multisig = { default-features = false , version = "40.1.0" }
pallet-proxy = { default-features = false , version = "40.1.0" }
pallet-identity = { default-features = false , version = "40.1.0" }
pallet-bounties = { default-features = false , version = "39.0.0" }
pallet-staking = { default-features = false , version = "40.1.1" }
pallet-timestamp = { default-features = false , version = "39.0.0" }
pallet-xcm = { default-features = false , version = "19.1.2" }
pallet-referenda = { default-features = false , version = "40.1.0" }

[features]
default = ["std", "try-runtime"]
fuzzing = []
std = [
    "staging-kusama-runtime/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-grandpa/std",
	"pallet-balances/std",
	"pallet-staking/std",
	"sp-consensus-babe/std",
	"polkadot-primitives/std",
	"polkadot-runtime-parachains/std",
	"sp-authority-discovery/std",
]
try-runtime = [
    "staging-kusama-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-timestamp/try-runtime",
]
