[package]
name = "kusama-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ziggy = { workspace = true }

staging-kusama-runtime = { workspace = true }
staging-xcm = { workspace = true }

kusama-runtime-constants = { workspace = true }

polkadot-primitives = { workspace = true }
polkadot-runtime-parachains = { workspace = true }
polkadot-runtime-common = { workspace = true }

codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-metadata = { workspace = true }

sp-application-crypto = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus-beefy = { workspace = true }
sp-authority-discovery = { workspace = true }
sp-core = { workspace = true }

pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-society = { workspace = true }
pallet-utility = { workspace = true }
pallet-multisig = { workspace = true }
pallet-proxy = { workspace = true }
pallet-identity = { workspace = true }
pallet-bounties = { workspace = true }
pallet-staking = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-xcm = { workspace = true }
pallet-referenda = { workspace = true }
pallet-bags-list = { workspace = true }
pallet-treasury = { workspace = true }
pallet-vesting = { workspace = true }
pallet-staking-async-ah-client = { workspace = true }

[features]
default = ["std", "try-runtime"]
fuzzing = []
std = [
    "staging-kusama-runtime/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-grandpa/std",
	"pallet-balances/std",
	"pallet-staking/std",
	"sp-consensus-babe/std",
	"sp-state-machine/std",
	"polkadot-primitives/std",
	"polkadot-runtime-parachains/std",
	"sp-authority-discovery/std",
]
try-runtime = [
    "staging-kusama-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-timestamp/try-runtime",
]
