[package]
name = "polkadot-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ziggy = { version = "1.3.2", default-features = false }

polkadot-runtime = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.0", default-features = false }
staging-xcm = { default-features = false , version = "18.0.0" }

polkadot-runtime-constants = { git = "https://github.com/polkadot-fellows/runtimes.git", tag = "v2.0.0", default-features = false }

polkadot-primitives = { version = "20.0.0", default-features = false }
polkadot-runtime-parachains = { version = "21.0.1", default-features = false }
polkadot-runtime-common = { version = "21.0.0", default-features = false }

codec = { version = "3.7.5", features = ["derive", "max-encoded-len"], default-features = false, package = "parity-scale-codec" }

frame-support = { default-features = false , version = "42.0.0" }
frame-system = { default-features = false , version = "42.0.0" }

sp-application-crypto = { default-features = false , version = "42.0.0" }
sp-runtime = { default-features = false , version = "43.0.0" }
sp-state-machine = { default-features = false , version = "0.47.0" }
sp-consensus-babe = { default-features = false , version = "0.44.0" }
sp-consensus-beefy = { default-features = false , version = "26.0.0" }
sp-authority-discovery = { default-features = false , version = "38.0.0" }
sp-core = { default-features = false, version = "38.0.0" }

pallet-balances = { default-features = false , version = "43.0.1" }
pallet-grandpa = { default-features = false , version = "42.0.0" }
pallet-society = { default-features = false, version = "42.2.0" }
pallet-utility = { default-features = false , version = "42.0.0" }
pallet-multisig = { default-features = false , version = "42.0.0" }
pallet-proxy = { default-features = false , version = "42.0.0" }
pallet-identity = { default-features = false , version = "42.0.0" }
pallet-bounties = { default-features = false , version = "41.0.0" }
pallet-staking = { default-features = false , version = "42.0.0" }
pallet-timestamp = { default-features = false , version = "41.0.0" }
pallet-xcm = { default-features = false , version = "22.0.1" }
pallet-referenda = { default-features = false , version = "42.0.0" }
pallet-bags-list = { default-features = false , version = "41.0.0" }
pallet-treasury = { default-features = false , version = "41.0.0" }
pallet-vesting = { default-features = false , version = "42.0.0" }

[features]
default = ["std", "try-runtime"]
fuzzing = []
std = [
    "polkadot-runtime/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-grandpa/std",
	"pallet-balances/std",
	"pallet-staking/std",
	"pallet-society/std",
	"sp-consensus-babe/std",
	"polkadot-primitives/std",
	"polkadot-runtime-parachains/std",
	"sp-authority-discovery/std",
]
try-runtime = [
    "polkadot-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-timestamp/try-runtime",
]