[package]
name = "solochain-template-fuzzer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ziggy = { workspace = true }

solochain-template-runtime = { workspace = true }

codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-metadata = { workspace = true }

sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
sp-consensus-aura = { workspace = true }

pallet-timestamp = { workspace = true }
pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }

[features]
default = ["std", "try-runtime"]
fuzzing = []
std = [
    "solochain-template-runtime/std",
	"sp-runtime/std",
	"frame-support/std",
	"pallet-timestamp/std",
	"sp-consensus-aura/std",
]
try-runtime = [
    "solochain-template-runtime/try-runtime",
	"frame-support/try-runtime",
	"pallet-timestamp/try-runtime",
]
